--- a/BootCamp/Day 8/hipnoz.html
+++ b/BootCamp/Day 8/hipnoz.html
@@ -18,7 +18,7 @@
         );
         background-size: 1000px 1000px;
         background-position: center;
-        animation: bioylebiboyle .5s infinite;
+        animation: bioylebiboyle 0.5s infinite;
       }
 
       /* @keyframes bioylebiboyle {
